<resources>
    <string name="app_name">Traffic</string>
    <string name="action_settings">Settings</string>

    <string name="traffic_message">Traffic used:</string>
    <string name="refresh_button">Refresh</string>

    <string name="upload_label">Upload</string>
    <string name="download_label">Download</string>
    <string name="total_label">Total</string>
    <string name="credit_label">Credit</string>

    <string name="error_toast">Couldn\'t get traffic information</string>
    <string name="error_not_connected">Not connected</string>
    <string name="error_no_traffic">Not connected to an AG DSN Network</string>

    <string name="pref_graph">Graph</string>
    <string name="pref_graph_key">pref_graph_style</string>
    <string name="pref_graph_daily">Show today\'s traffic</string>
    <string name="pref_graph_all">Show all traffic</string>
    <string name="pref_graph_daily_val">graph_daily</string>
    <string name="pref_graph_all_val">graph_all</string>

    <string name="pref_dorm_key">pref_dorm_name</string>
    <string name="pref_dorm">Dormitory</string>

    <string name="pref_bg_on">Check traffic in background</string>
    <string name="pref_bg_off">Don\'t check traffic in background</string>

    <string name="dorm_wu">Wundtstraße</string>
    <string name="dorm_hss">Hochschulstraße</string>
    <string name="dorm_bor">Borsbergstraße</string>
    <string name="dorm_ger">Gerokstraße</string>
    <string name="dorm_zeu">Zeunerstraße</string>

    <string name="dorm_val_wu">https://www.wh2.tu-dresden.de/traffic/getMyTraffic.php</string>
    <string name="dorm_val_hss">https://wh12.tu-dresden.de/tom.addon2.php</string>
    <string name="dorm_val_bor">http://wh10.tu-dresden.de/phpskripte/getMyTraffic.php</string>
    <string name="dorm_val_ger">http://www.wh17.tu-dresden.de/traffic/prozent</string>
    <string name="dorm_val_zeu">http://zeus.wh25.tu-dresden.de/traffic.php</string>
</resources>
